WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290077
Fix ancestor bounding box for "disabled" <foreignObject> and <image>
https://bugs.webkit.org/show_bug.cgi?id=290077
Summary
Fix ancestor bounding box for "disabled" <foreignObject> and <image>
Ahmad Saleem
Reported
2025-03-19 17:49:26 PDT
ssia - merge / inspired by -
https://chromium.googlesource.com/chromium/src/+/e47e6e98afe2de2d737ac7827e9309430e68b60b
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-19 17:52:21 PDT
<
rdar://problem/147455573
>
Ahmad Saleem
Comment 2
2025-03-19 17:53:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42723
EWS
Comment 3
2025-03-20 02:48:39 PDT
Committed
292411@main
(9e1dc10d3cc5): <
https://commits.webkit.org/292411@main
> Reviewed commits have been landed. Closing PR #42723 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug