Fix ancestor bounding box for "disabled" <foreignObject> and <image> https://bugs.webkit.org/show_bug.cgi?id=290077 rdar://problem/147455573

Reviewed by Antoine Quint.

This patch aligns WebKit with Gecko / Firefox, Blink / Chromium and Web Specification.

Inspired by: https://chromium.googlesource.com/chromium/src/+/e47e6e98afe2de2d737ac7827e9309430e68b60b

Per Web Specification [1] & [2]:

[1] https://svgwg.org/svg2-draft/embedded.html#Placement

"A value of zero for either width or height disables rendering of the
element and its embedded content."

[2] https://svgwg.org/svg2-draft/coords.html#BoundingBoxes

"For each descendant graphics element child of parent:
  * If child is not rendered then continue to the next descendant
    graphics element."

<foreignObject> / <image> with 'width' or 'height' zero should not
contribute to an ancestor container's bounding box.

* Source/WebCore/rendering/svg/SVGRenderSupport.cpp:
(WebCore::SVGRenderSupport::computeContainerBoundingBoxes):
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGForeignObject.h:
* Source/WebCore/rendering/svg/legacy/LegacyRenderSVGImage.h:
* LayoutTests/imported/w3c/web-platform-tests/svg/types/scripted/SVGGraphicsElement.getBBox-01-expected.txt: Rebaselined

Canonical link: https://commits.webkit.org/292411@main